--- a/instagram/app/popup.html
+++ b/instagram/app/popup.html
@@ -33,7 +33,7 @@
               </div>
               <p>
                 "unfollow" feature doesn't work currently </br>
-                Want to help ? Visit <a href="" class="text-xs text-blue-500 font-semibold">github repo</a> to contribute
+                Want to help ? Visit <a href="https://github.com/7urkm3n/instagram-feature-extension" class="text-xs text-blue-500 font-semibold" target="_blank">github repo</a> to contribute
               </p>
             </div>
           </div>
