notification and localstorage added

--- a/igim/app/popup.html
+++ b/igim/app/popup.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title> igim </title>
+    <title> IGim </title>
     <link rel="stylesheet" href="assets/css/main.css" />
     <link rel="stylesheet" href="assets/css/tailwind.min.css" />
     <style>
@@ -20,18 +20,17 @@
         <div class="relative bg-white shadow-lg sm:rounded-3xl sm:p-20 pb-6">
           <div class="max-w-md mx-auto">
             <div class="pt-6 text-base leading-6 font-bold sm:text-lg sm:leading-7">
-              <p class="h-7 sm:h-8"> IGIM: 
-              <button id="getUnfollowers" class="text-xs py-2 px-4 bg-transparent hover:bg-blue-500 text-blue-500 font-semibold hover:text-white">
-                get unfollowers
-              </button>
-            </p>
+              <p class="h-7 sm:h-8"> IGim: 
+                <button id="getUnfollowers" class="text-xs py-2 px-4 bg-transparent hover:bg-blue-500 text-blue-500 font-semibold hover:text-white">
+                  get unfollowers
+                </button>
+              </p>
             </div>
             <div class="divide-y divide-gray-200">
               <div class="py-8 text-base leading-6 space-y-4 text-gray-700 sm:text-lg sm:leading-7">
                 <ul class="list-disc space-y-2"></ul>
               </div>
               <p>
-                "unfollow" feature doesn't work currently </br>
                 Want to contribute? Visit <a href="https://github.com/7urkm3n/igim" class="text-xs text-blue-500 font-semibold" target="_blank">github repo</a> to contribute
               </p>
             </div>
